# vbcpp-editor-imgui

./: CMakeLists.txt  README.md
Data/: AABBox.frag  AABBox.vert  shader.frag
libs/glfw/: CMakeLists.txt
libs/glfw/src/: CMakeLists.txt
libs/soil/: CMakeLists.txt
src/: main.cpp
src/Core/: CMakeLists.txt  Component.cpp  Component.h
src/Editor/: CMakeLists.txt  Editor.h  MainMenu.cpp  MainMenu.h
src/Graphics/: AABBox.cpp  AABBox.h  CMakeLists.txt  Cube.hpp  Image.cpp  Image.h  LoadShader.cpp  Mesh.cpp  Mesh.h  RenderComponent.cpp  RenderComponent.h  Renderer.cpp  Renderer.h  Texture2D.cpp  Texture2D.h  Vertex.h
src/ImGui/: CMakeLists.txt  ImguiWindowsFileIO.cpp  imgui.h  imgui_demo.cpp  imgui_impl_glfw_gl3.cpp
src/Renderer/: CMakeLists.txt  Cube.hpp  LoadShader.cpp  LoadShader.h  VBImage.cpp  VBImage.h
src/Scene/: CMakeLists.txt  CameraFPS.cpp  CameraFPS.h  CameraStatic.cpp  CameraStatic.h  SceneObject.cpp  SceneObject.h  Transform.cpp  Transform.h
src/Window/: Window.cpp  Window.h
